[gd_scene load_steps=4 format=3 uid="uid://cj3ialc2oqj7r"]

[ext_resource type="Script" path="res://scripts/unit_fog_disperser.gd" id="1_llhrq"]
[ext_resource type="Texture2D" uid="uid://bynenuciv7q1b" path="res://img/light.png" id="2_opf0p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uudte"]
resource_local_to_scene = true

[node name="UnitFogDisperser" type="Node2D"]
script = ExtResource("1_llhrq")

[node name="UnitArea2D" type="Area2D" parent="."]
collision_layer = 0
monitoring = false

[node name="UnitCollisionShape2D" type="CollisionShape2D" parent="UnitArea2D"]
shape = SubResource("CircleShape2D_uudte")

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
blend_mode = 2
range_item_cull_mask = 3
texture = ExtResource("2_opf0p")

[connection signal="body_shape_entered" from="UnitArea2D" to="." method="_on_area_2d_body_shape_entered"]
